# pfse_starterkit

./: README.md  empty_book.xlsx  pyproject.toml
.github/workflows/: python-publish.yml  python-pytest.yml
pfse_starterkit/: __init__.py  __main__.py  sectionproperties_test.py  streamlit_test.py  vtk_cylinder.py
